# AIOperator

./: .gitignore  README.md  pyproject.toml  test_dialogue_flow.py  test_intent_recognition.py
activities/bitable/: __init__.py  sync.py
activities/claude/: __init__.py  capture_requirement.py  generate_prd.py
activities/db/: __init__.py  sync_requirement.py
activities/feishu/: __init__.py  cards.py  send_card.py  send_message.py
activities/git/: __init__.py  commit.py
activities/websocket/: notify.py
aiop/: db.py  feishu_client.py  project_repository.py  requirement_repository.py  settings.py  types.py
apps/feishu_connector/: Dockerfile  main.py  message_handler.py
apps/ingress/: Dockerfile  chat_handler.py  confirmation_handler.py  conversation_state.py  (+15 more)
deploy/: docker-compose.yml
docs/: ARCHITECTURE_FOR_REVIEW.md  ARCHITECTURE_V2_LONGCONN.md  ARCHITECTURE_v2.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_SOLUTIONS.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  TAILSCALE_SSH_MESH_OPS.md  TEST_CHECKLIST.md  VERIFICATION_GUIDE.md  WEEK0_EXECUTION_REPORT.md  WEEK0_FINAL_REPORT.md  WEEK0_HANDOFF.md  bitable_schema.md  cli_contracts.md  dialogue_state_machine_deployment.md  dialogue_state_machine_fix.md  dialogue_state_machine_proposal.md  feishu_cards.md
migrations/: 001_project_management.sql
scripts/: check_code.sh  check_conversation_system.sh  init_db.sh  install_mesh_autoreconnect_linux.sh  install_mesh_autoreconnect_macos.sh  install_mesh_sudoers_macos.sh  mesh_healthcheck.sh
tests/: test_conversation_flow.py
workflows/: __init__.py  requirement.py
(+17 files in other folders)
